--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,10 @@ services:
         'sh',
         '-c',
         'docker-entrypoint.sh --requirepass ${REDIS_PASSWORD:-redis_password} --loglevel warning'
-      ] # Change password in production
+      ]
     networks:
       - net
+      
   ###############################################################################
   # Mongo
   ###############################################################################
@@ -32,21 +33,9 @@ services:
       - ./backup:/backup
     networks:
       - net
+      
   ###############################################################################
-  # Reverse Proxy
-  ###############################################################################
-  reverse-proxy:
-    image: caddy:latest
-    profiles:
-      - ''
-    command: caddy reverse-proxy --from ${APP_PROTOCOL:-http}://${APP_DOMAIN}${APP_PORT:+:}${APP_PORT} --to gateway:8080
-    ports:
-      - ${APP_PORT:-80}:${APP_PORT:-80}
-      - 443:443
-    networks:
-      - net
-  ###############################################################################
-  # Gateway
+  # Gateway - Main Entry Point (Coolify will proxy to this)
   ###############################################################################
   gateway:
     restart: unless-stopped
@@ -64,21 +53,11 @@ services:
       LANDLORD_BASE_PATH: /landlord
       TENANT_FRONTEND_URL: http://tenant-frontend:8190
       TENANT_BASE_PATH: /tenant
-      APP_DOMAIN: ${APP_DOMAIN:-localhost}${APP_PORT:+:}${APP_PORT}
+      APP_DOMAIN: ${APP_DOMAIN:-localhost}
       CORS_ENABLED: 'true'
       TENANTAPI_URL: http://tenantapi:8250/tenantapi
-    ports:
-      - '8080:8080'
-    # healthcheck:
-    #   test:
-    #     [
-    #       'CMD-SHELL',
-    #       'wget --no-verbose --tries=1 --spider ${APP_PROTOCOL:-http}://${APP_DOMAIN:-localhost}${APP_PORT:+:}${APP_PORT}/health/noUI || exit 1'
-    #     ]
-    #   interval: 1s
-    #   timeout: 2s
-    #   retries: 20
-    #   start_period: 15s
+    expose:
+      - '8080'
     networks:
       - net
     depends_on:
@@ -92,6 +71,7 @@ services:
         condition: service_started
       emailer:
         condition: service_started
+        
   ###############################################################################
   # Authenticator
   ###############################################################################
@@ -103,16 +83,16 @@ services:
       PORT: 8000
       LOGGER_LEVEL: info
       REDIS_URL: redis://redis
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password} # Change password in production
-      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret} # Change secret in production
-      REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET:-refresh_token_secret} # Change secret in production
-      RESET_TOKEN_SECRET: ${RESET_TOKEN_SECRET:-reset_token_secret} # Change secret in production
-      APPCREDZ_TOKEN_SECRET: ${APPCREDZ_TOKEN_SECRET:-appcredz_token_secret} # Change secret in production
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
+      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret}
+      REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET:-refresh_token_secret}
+      RESET_TOKEN_SECRET: ${RESET_TOKEN_SECRET:-reset_token_secret}
+      APPCREDZ_TOKEN_SECRET: ${APPCREDZ_TOKEN_SECRET:-appcredz_token_secret}
       MONGO_URL: ${MONGO_URL:-mongodb://mongo/mredb}
       EMAILER_URL: http://emailer:8400/emailer
       SIGNUP: 'true'
-      APP_DOMAIN: ${APP_DOMAIN:-localhost} # do not pass APP_PORT here
-      APP_PROTOCOL: ${APP_PROTOCOL:-http}
+      APP_DOMAIN: ${APP_DOMAIN:-localhost}
+      APP_PROTOCOL: ${APP_PROTOCOL:-https}
     expose:
       - '8000'
     networks:
@@ -124,6 +104,7 @@ services:
         condition: service_started
       emailer:
         condition: service_started
+        
   ###############################################################################
   # PDFGenerator
   ###############################################################################
@@ -135,10 +116,10 @@ services:
       PORT: 8300
       LOGGER_LEVEL: info
       MONGO_URL: ${MONGO_URL:-mongodb://mongo/mredb}
-      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret} # Change secret in production
-      CIPHER_KEY: ${CIPHER_KEY:-cipher_key} # Change key in production
-      CIPHER_IV_KEY: ${CIPHER_IV_KEY:-cipher_iv_key} # Change key in production
-      UPLOAD_MAX_SIZE: 2000000000 # ~2Gb
+      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret}
+      CIPHER_KEY: ${CIPHER_KEY:-cipher_key}
+      CIPHER_IV_KEY: ${CIPHER_IV_KEY:-cipher_iv_key}
+      UPLOAD_MAX_SIZE: 2000000000
     expose:
       - '8300'
     networks:
@@ -146,6 +127,7 @@ services:
     depends_on:
       mongo:
         condition: service_started
+        
   ###############################################################################
   # Emailer
   ###############################################################################
@@ -157,38 +139,33 @@ services:
       ALLOW_SENDING_EMAILS: 'true'
       PORT: 8400
       LOGGER_LEVEL: info
-      LANDLORD_APP_URL: ${APP_PROTOCOL:-http}://${APP_DOMAIN:-localhost}${APP_PORT:+:}${APP_PORT}/landlord
-      TENANT_APP_URL: ${APP_PROTOCOL:-http}://${APP_DOMAIN:-localhost}${APP_PORT:+:}${APP_PORT}/tenant
+      LANDLORD_APP_URL: ${APP_PROTOCOL:-https}://${APP_DOMAIN:-localhost}/landlord
+      TENANT_APP_URL: ${APP_PROTOCOL:-https}://${APP_DOMAIN:-localhost}/tenant
       MONGO_URL: ${MONGO_URL:-mongodb://mongo/mredb}
-      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret} # Change secret in production
-      CIPHER_KEY: ${CIPHER_KEY:-cipher_key} # Change key in production
-      CIPHER_IV_KEY: ${CIPHER_IV_KEY:-cipher_iv_key} # Change key in production
+      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret}
+      CIPHER_KEY: ${CIPHER_KEY:-cipher_key}
+      CIPHER_IV_KEY: ${CIPHER_IV_KEY:-cipher_iv_key}
       PDFGENERATOR_URL: http://pdfgenerator:8300/pdfgenerator
       #########################################
       # Email service configuration
-      # needed to reset landlord password
-      # needed to sign tenant in
+      # Choose ONE of the following options:
       #########################################
+      # Option 1: Gmail
       GMAIL_EMAIL: ${GMAIL_EMAIL}
       GMAIL_APP_PASSWORD: ${GMAIL_APP_PASSWORD}
-      #########################################
-      # OR
-      #########################################
+      # Option 2: Mailgun
       MAILGUN_API_KEY: ${MAILGUN_API_KEY}
       MAILGUN_DOMAIN: ${MAILGUN_DOMAIN}
-      #########################################
-      # OR
-      #########################################
+      # Option 3: SMTP
       SMTP_SERVER: ${SMTP_SERVER}
       SMTP_PORT: ${SMTP_PORT}
       SMTP_SECURE: ${SMTP_SECURE}
       SMTP_USERNAME: ${SMTP_USERNAME}
       SMTP_PASSWORD: ${SMTP_PASSWORD}
-      #########################################
+      # Common email settings
       EMAIL_FROM: ${EMAIL_FROM}
       EMAIL_REPLY_TO: ${EMAIL_REPLY_TO}
       EMAIL_BCC: ${EMAIL_BCC}
-      #########################################
     expose:
       - '8400'
     networks:
@@ -198,8 +175,9 @@ services:
         condition: service_started
       pdfgenerator:
         condition: service_started
+        
   ###############################################################################
-  # api
+  # API
   ###############################################################################
   api:
     restart: unless-stopped
@@ -214,9 +192,9 @@ services:
       EMAILER_URL: http://emailer:8400/emailer
       PDFGENERATOR_URL: http://pdfgenerator:8300/pdfgenerator
       RESTORE_DB: 'false'
-      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret} # Change secret in production
-      CIPHER_KEY: ${CIPHER_KEY:-cipher_key} # Change key in production
-      CIPHER_IV_KEY: ${CIPHER_IV_KEY:-cipher_iv_key} # Change key in production
+      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret}
+      CIPHER_KEY: ${CIPHER_KEY:-cipher_key}
+      CIPHER_IV_KEY: ${CIPHER_IV_KEY:-cipher_iv_key}
     expose:
       - '8200'
     networks:
@@ -228,8 +206,9 @@ services:
         condition: service_started
       pdfgenerator:
         condition: service_started
+        
   ###############################################################################
-  # tenant api
+  # Tenant API
   ###############################################################################
   tenantapi:
     restart: unless-stopped
@@ -239,7 +218,7 @@ services:
       PORT: 8250
       LOGGER_LEVEL: info
       MONGO_URL: ${MONGO_URL:-mongodb://mongo/mredb}
-      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret} # Change secret in production
+      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET:-access_token_secret}
     expose:
       - '8250'
     networks:
@@ -247,8 +226,9 @@ services:
     depends_on:
       mongo:
         condition: service_started
+        
   ###############################################################################
-  # Landlord frontend
+  # Landlord Frontend
   ###############################################################################
   landlord-frontend:
     restart: unless-stopped
@@ -258,7 +238,7 @@ services:
       PORT: 8180
       DOCKER_GATEWAY_URL: http://gateway:8080
       CORS_ENABLED: 'true'
-      GATEWAY_URL: ${APP_PROTOCOL:-http}://${APP_DOMAIN:-localhost}${APP_PORT:+:}${APP_PORT}
+      GATEWAY_URL: ${APP_PROTOCOL:-https}://${APP_DOMAIN:-localhost}
       NODE_ENV: production
       SIGNUP: 'true'
     expose:
@@ -268,8 +248,9 @@ services:
     depends_on:
       gateway:
         condition: service_started
+        
   ###############################################################################
-  # Tenant frontend
+  # Tenant Frontend
   ###############################################################################
   tenant-frontend:
     restart: unless-stopped
@@ -279,7 +260,7 @@ services:
       PORT: 8190
       DOCKER_GATEWAY_URL: http://gateway:8080
       CORS_ENABLED: 'true'
-      GATEWAY_URL: ${APP_PROTOCOL:-http}://${APP_DOMAIN:-localhost}${APP_PORT:+:}${APP_PORT}
+      GATEWAY_URL: ${APP_PROTOCOL:-https}://${APP_DOMAIN:-localhost}
       NODE_ENV: production
     expose:
       - '8190'
@@ -288,8 +269,9 @@ services:
     depends_on:
       gateway:
         condition: service_started
+        
 ###############################################################################
-# microservices network
+# Networks
 ###############################################################################
 networks:
   net:
